--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <title>Tic-Tac-Toe - Play retro Tic-Tac-Toe online for free</title>
+    <meta name="description" content="Play the classic Tic-Tac-Toe game (also called Noughts and Crosses) for free online with two players.">  
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <!--
@@ -25,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+   
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
